Added more pages

--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-<body>
+<body class="home">
     <header class="centered-header">
-        <h1>Hi, I'm Omski!</h1>
-        <h2>Welcome to my website!</h2>
+        <div class ="navbar">
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="about.html" class="nav-link">About</a>
+            <a href="projects.html" class="nav-link">Projects</a>
+        </div>
     </header>
     <main>
-        <div class = "index-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error numquam explicabo at laborum commodi quidem quam iure mollitia recusandae totam porro accusantium, odit inventore rem corporis, quaerat ex suscipit soluta.</p>
+        <div class = "body" id="index-body">
+            <h1>
+                Hi, I'm Omski!
+                <img src="Pictures/staring_cat.png" alt="Omski stares at you" class="cat" id="staring_cat">
+            </h1>
+            <h2>Welcome to my website!</h2>
+            <p>Well... this is awkward...</p>
         </div>
     </main>
     <footer>
