Added the About info and an image that I find funny :D

--- a/about.html
+++ b/about.html
@@ -18,7 +18,38 @@
     <main>
         <div class = "body" id="about-body">
             <h1>About Omski</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error numquam explicabo at laborum commodi quidem quam iure mollitia recusandae totam porro accusantium, odit inventore rem corporis, quaerat ex suscipit soluta.</p>
+            <h2>
+                Hello, I am Omski!
+                <img src="Pictures/Omski_picture.png" alt="Omski" class="Om_cat" id="omski_cat">
+            </h2>
+            <h2 id="second-h2">I am:</h3>
+            <list>
+                <li>A Christian</li>
+                <li>A man with ambitions</li>
+                <li>A man in-love</li>
+                <li>An IT Specialist</li>
+                <li>A man still searching himself</li>
+                <li>A man trying to be better</li>
+                <li>A man with faults</li>
+                <li>A software engineer</li>
+                <li>A man trying to rekindle old flames</li>
+                <li>A man with hopes and dreams</li>
+                <li>A man who loves video-games</li>
+                <li>A man who enjoys collecting Pokemon Trading Cards</li>
+                <li>A man with anxiety</li>
+                <li>A man who is quiet</li>
+                <li>A man trying to learn</li>
+                <li>Emotional</li>
+                <li>A man</li>
+                <li>Somone trying to learn to be their own person</li>
+                <li>Inspired</li>
+                <li>Glad to be inspired by others</li>
+                <li>Loved</li>
+                <li>Loving</li>
+                <li>Weird?</li>
+                <li>Somone trying to be honest</li>
+            </list>
+            
         </div>
     </main>
     <footer>
