Changed CSS to flexbox layout, fixed responsiveness to screen size differences

--- a/about.html
+++ b/about.html
@@ -48,6 +48,7 @@
                 <li>Loving</li>
                 <li>Weird?</li>
                 <li>Somone trying to be honest</li>
+                <li>Somone who loves cats!!1!</li>
             </list>
             
         </div>
