--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a href="index.html" class="nav-link">Home</a>
             <a href="about.html" class="nav-link">About</a>
             <a href="projects.html" class="nav-link">Projects</a>
+            <a href="blog.html" class="nav-link">Blog</a>
         </div>
     </header>
     <main>
