--- a/about.html
+++ b/about.html
@@ -11,7 +11,13 @@
     <header class="centered-header">
         <div class ="navbar">
             <a href="index.html" class="nav-link">Home</a>
-            <a href="about.html" class="nav-link">About</a>
+            <div class ="dropdown">
+                <a href="about.html" class="nav-link">About</a>
+                <ul class="dropdown-menu">
+                <li><a href="gaming.html">Gaming</a></li>
+                <li><a href="art.html">Art</a></li>
+            </ul>
+            </div>
             <a href="projects.html" class="nav-link">Projects</a>
             <a href="blog.html" class="nav-link">Blog</a>
         </div>
