Launched up the gaming page with some info on what I play and what my setup is. Plan to add more sub-pages(?) in the future, for the various games and what content I might upload for them

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 Hi, I'm Omski!
                 <img src="Pictures/staring_cat.png" alt="Omski stares at you" class="cat" id="staring_cat">
             </h1>
-            <h2>Welcome to my website!</h2>
+            <h2>Welcome to my website!</h2><br>
             <p>Well... this is awkward...</p>
         </div>
     </main>
