Added a post to the blogpost and a game to the games list. Still plan on updating the site, just can't seem to find any ideas or inspiration right now.

--- a/gaming.html
+++ b/gaming.html
@@ -36,6 +36,7 @@
                 <div class="games-list">
                     <h3>Current games I play:</h3>
                     <ul>
+                        <li>Dinkum</li>
                         <li>Helldivers 2</li>
                         <li>Team Fortress 2</li>
                         <li>Balatro</li>
